--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -16,7 +16,7 @@ body {
   clear: both; }
 
 h1.title {
-  font-size: 80px;
+  font-size: 47px;
   font-weight: bold;
   margin: 0;
   display: block;
@@ -61,7 +61,6 @@ h1.title {
   font-weight: bold;
   border-radius: 3px;
   color: white;
-  margin-top: 8px;
   text-align: center; }
   .score-container:after, .best-container:after {
     position: absolute;
@@ -521,14 +520,15 @@ hr {
   display: inline-block;
   background: #8f7a66;
   border-radius: 3px;
-  padding: 0 20px;
+  padding: 7.5px 20px;
   text-decoration: none;
   color: #f9f6f2;
   height: 40px;
   line-height: 42px;
   display: block;
   text-align: center;
-  float: right; }
+  float: right; 
+  margin-left: 10px;}
 
 .game-explanation {
   margin-top: 50px; }
@@ -555,6 +555,7 @@ hr {
     min-width: 40px; }
 
   .heading {
+	
     margin-bottom: 10px; }
 
   .game-intro {
