--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -8,7 +8,7 @@ html, body {
   font-size: 18px; }
 
 body {
-  margin: 80px 0; }
+  margin: 20px 0; }
 
 .heading:after {
   content: "";
@@ -16,7 +16,7 @@ body {
   clear: both; }
 
 h1.title {
-  font-size: 47px;
+  font-size: 80px;
   font-weight: bold;
   margin: 0;
   display: block;
@@ -137,7 +137,7 @@ hr {
   100% {
     opacity: 1; } }
 .game-container {
-  margin-top: 40px;
+  margin-top: 10px;
   position: relative;
   padding: 15px;
   cursor: default;
@@ -517,19 +517,21 @@ hr {
   margin-bottom: 0; }
 
 .restart-button {
-  display: inline-block;
-  background: #8f7a66;
+  font-size: 18px;
+  float: left;
+  width: 150px;
+  height: 100%;
+  display:block;
+  background-color: #8f7a66;
   border-radius: 3px;
-  padding: 7.5px 20px;
   text-decoration: none;
-  color: #f9f6f2;
-  height: 40px;
-  line-height: 42px;
-  display: block;
-  text-align: center;
-  float: right; 
-  margin-left: 10px;}
+  color: white;
+   padding: 15px 10px;
+  text-align: center;}
 
+.restart-button:hover{
+  background-color: #bbada0;	
+}
 .game-explanation {
   margin-top: 50px; }
 
@@ -555,7 +557,6 @@ hr {
     min-width: 40px; }
 
   .heading {
-	
     margin-bottom: 10px; }
 
   .game-intro {
@@ -566,10 +567,9 @@ hr {
 
   .restart-button {
     width: 42%;
-    padding: 0;
     display: block;
     box-sizing: border-box;
-    margin-top: 2px; }
+     }
 
   .game-container {
     margin-top: 17px;
@@ -757,45 +757,10 @@ hr {
     margin-top: 90px !important; }
   .game-message .lower {
     margin-top: 30px !important; } }
-
-
-
-	/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 3; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.ads-top{
+	margin-top:10px;
 }
-
-/* Modal Content */
-.modal-content {
-    background-color: transparent;
-    margin: auto;
-    padding: 2px;
-    width: 300px;
+.ads-bottom{
+	margin-top:20px;
+	max-height:90px !important;
 }
-
-/* The Close Button */
-.close {
-    color: white;
-    float: right;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-	
-
